--- a/Pacemaker/app/src/main/res/values/styles.xml
+++ b/Pacemaker/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <!-- 타이틀 없애게 할려고 만든 코드 -->
     <style name="CustomAppTheme" parent="AppTheme">
         <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <style name="CustomAppTheme.NoActionBar">
