--- a/Pacemaker/app/src/main/res/layout/fragment_addition.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_addition.xml
@@ -408,6 +408,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_interval">
 
                 <ImageView
+                    android:id="@+id/fAddition_iv_save"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
