--- a/Pacemaker/app/src/main/res/layout/activity_play_popup.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_play_popup.xml
@@ -9,11 +9,25 @@
     <FrameLayout
         android:id="@+id/aPlayPopup_flo_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/aPlayPopup_adView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    </FrameLayout>
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/aPlayPopup_adView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintTop_toBottomOf="@+id/aPlayPopup_flo_container"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- 백업 본 광고 Id
+       ads:adUnitId="ca-app-pub-9818502417467314/5178000798"-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
