--- a/Pacemaker/app/src/main/res/layout/dialog_give_up_exercise.xml
+++ b/Pacemaker/app/src/main/res/layout/dialog_give_up_exercise.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/dRemove_clo_main"
+    android:id="@+id/dGiveUp_clo_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/dRemove_tv_main"
+        android:id="@+id/dGiveUp_tv_main"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/dRemove_remove_txv"
+        android:text="@string/dGiveUp_give_up_txv"
         android:textSize="23sp"
         android:textColor="#ff000000"
-        app:layout_constraintBottom_toTopOf="@+id/dRemove_tv_confirm"
+        app:layout_constraintBottom_toTopOf="@+id/dGiveUp_tv_confirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/dRemove_tv_confirm"
+        android:id="@+id/dGiveUp_tv_confirm"
         android:layout_width="60dp"
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
         android:gravity="center"
-        android:text="@string/dRemove_confirm_txv"
+        android:text="@string/dGiveUp_confirm_txv"
         android:textSize="17sp"
         android:textColor="#ff000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dRemove_tv_main"/>
+        app:layout_constraintTop_toBottomOf="@+id/dGiveUp_tv_main"/>
 
     <TextView
-        android:id="@+id/dRemove_tv_cancel"
+        android:id="@+id/dGiveUp_tv_cancel"
         android:layout_width="60dp"
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
         android:gravity="center"
-        android:text="@string/dRemove_cancel_txv"
+        android:text="@string/dGiveUp_cancel_txv"
         android:textSize="17sp"
         android:textColor="#ff000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/dRemove_tv_confirm"
-        app:layout_constraintTop_toBottomOf="@+id/dRemove_tv_main"/>
+        app:layout_constraintEnd_toStartOf="@+id/dGiveUp_tv_confirm"
+        app:layout_constraintTop_toBottomOf="@+id/dGiveUp_tv_main"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
