--- a/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
+++ b/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
@@ -49,7 +49,7 @@
         android:id="@+id/dProfile_clo_weight"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:layout_constraintBottom_toTopOf="@+id/dProfile_tv_confirm"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dProfile_clo_height">
@@ -80,24 +80,27 @@
             android:textColorHint="#ffcccccc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/dProfile_tv_weight"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/dProfile_tv_confirm"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/dProfile_tv_confirm"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:text="@string/dRemove_confirm_txv"
+            android:textSize="17sp"
+            android:textColor="#ff000000"
+            app:layout_constraintStart_toEndOf="@+id/dProfile_ev_weight"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <TextView
-        android:id="@+id/dProfile_tv_confirm"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="center"
-        android:text="@string/dRemove_confirm_txv"
-        android:textSize="17sp"
-        android:textColor="#ff000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dProfile_clo_weight"/>
 
     <!--
     <TextView
